# claude-quickstarts

./: .gitignore  8X_ARCHITECTURE.md  CLAUDE.md  DNS_Return_main.yaml  EXTENDED_THINKING_IMPLEMENTATION.md  EXTENDED_THINKING_QUICKREF.md  IMPLEMENTATION_GAP_ANALYSIS.md  README.md  SCALABILITY_ANALYSIS.md  coverage.xml  motion_merger_setup.sh  open_motion_merger.cmd  pyproject.toml  registry.yaml  requirements-dev.txt
autonomous-coding/: .env  .gitignore  AGENTS.md  AZURE_FOUNDRY.md  CHANGELOG.md  HOW_IT_WORKS.md  IMPLEMENTATION_PLAN_V3_1.md  QUICK_TEST_GUIDE.md  README.md  REVIEW_V2_autonomous_coding.md  REVIEW_V3_1_autonomous_coding.md  REVIEW_V3_2_autonomous_coding.md  REVIEW_V3_3_autonomous_coding.md  REVIEW_V3_4_autonomous_coding.md  REVIEW_autonomous_coding.md  TRACEABILITY_MATRIX.md  V3_1_TRACEABILITY_MATRIX.md  V3_2_TRACEABILITY_MATRIX.md  V3_3_TRACEABILITY_MATRIX.md  V3_4_TRACEABILITY_MATRIX.md  V3_5_TRACEABILITY_MATRIX.md  V3_6_3_TRACEABILITY_MATRIX.md  V3_7_TRACEABILITY_MATRIX.md  agent.py  artifacts.py  autonomous_agent_demo.py  builder.py  client.py  evaluator.py  feature_agent.py  metrics.py  openai_codex_cli.py  orchestrator.py  phase_types.py  planner.py  progress.py  prompts.py  provider_resolution.py  pyproject.toml  pyrightconfig.json  (+5 more)
autonomous-coding/artifacts/: README.md  qa_report_template.json
autonomous-coding/backups/implementation_plans/: IMPLEMENTATION_PLAN_V2.md
autonomous-coding/benchmarks/: README.md  evaluate.py  run_benchmark.py
autonomous-coding/benchmarks/t0_validation/: spec.txt
autonomous-coding/benchmarks/t1_email_validator/: spec.txt
autonomous-coding/benchmarks/t2_todo_cli/: spec.txt
autonomous-coding/benchmarks/t3_rest_api/: spec.txt
autonomous-coding/benchmarks/t4_url_shortener/: spec.txt
autonomous-coding/prompts/: app_spec.txt  builder_prompt.md  coding_prompt.md  evaluator_prompt.md  feature_spec_template.txt  initializer_prompt.md  minimal_test_spec.txt  planner_prompt.md  quick_test_initializer.md
autonomous-coding/schemas/: acceptance_criteria.schema.json  qa_report.schema.json  round_state.schema.json  run_state.schema.json  sprint_contract.schema.json  sprint_contract_negotiation.schema.json  work_backlog.schema.json
autonomous-coding/src/autonomous_agent/: __init__.py  cli.py  config.py  progress.py  runner.py  security.py  templates.py
autonomous-coding/tests/: test_agent_provider_runtime.py  test_artifacts.py  test_cli.py  test_client_auth.py  test_dry_run_contract.py  test_live_phase_smoke.py  test_openai_codex_cli.py  test_orchestrator_integration.py  test_phase_errors.py  test_progress.py  test_prompts.py  test_provider_resolution.py  test_security_hook.py
singularity/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
singularity/agents/: base.py  swarm.py
singularity/api/: auth.py  dashboard.py  main.py  middleware.py  state.py  task_ui.py
singularity/api/routers/: __init__.py  coalescer.py  embeddings.py  evals.py  state_store.py  streaming.py  tenancy.py  vectors.py
singularity/cli/: main.py
singularity/config/: settings.py
singularity/core/: ab_test.py  alerting.py  anomaly_detector.py  anonymizer.py  api_keys.py  audit_log.py  batch.py  budget_manager.py  cache.py  chunker.py  circuit_breaker.py  citation_tracker.py  coalescer.py  consensus.py  context_manager.py  cost_estimator.py  deduplicator.py  embeddings.py  entity_extractor.py  eval_harness.py  feature_flags.py  feedback.py  fuzzy_matcher.py  graceful_shutdown.py  graph.py  guardrails.py  health_aggregator.py  health_monitor.py  histogram.py  intent_classifier.py  keyword_extractor.py  language_detector.py  limiter.py  log_buffer.py  logging_config.py  orchestrator.py  output_parser.py  persistence.py  pipeline.py  prompt_templates.py  (+31 more)
singularity/deploy/: README.md
singularity/deploy/k8s/: deployment.yaml  hpa.yaml  service.yaml
singularity/evals/: evaluator.py
singularity/memory/: embeddings.py  mem0_store.py  vector_store.py
singularity/providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py
singularity/rag/: ingestor.py
singularity/scripts/: run_tests.sh
singularity/sdk/: __init__.py  client.py  export_openapi.py
singularity/tests/: conftest.py
(+654 files in other folders)
