[project]
name = "singularity"
version = "0.1.0"
description = "Singularity — Multi-LLM Meta-Cognitive Core (Claude + Gemini)"
requires-python = ">=3.11"

dependencies = [
    # Orchestrace
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.0",

    # Paměť
    "mem0ai>=0.1.0",

    # RAG / Ingestion
    "llama-index>=0.11.0",
    "llama-index-vector-stores-chroma>=0.2.0",

    # Prompt optimalizace
    "dspy-ai>=2.5.0",

    # Vector DB
    "chromadb>=0.5.0",

    # Eval
    "deepeval>=1.4.0",

    # API vrstva
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",

    # Rate limiting + observabilita
    "aiolimiter>=1.1.0",
    "prometheus-client>=0.21.0",

    # Lokální LLM
    "ollama>=0.3.0",

    # Utility
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "pytest-html>=4.0",
    "locust>=2.31",
    "httpx>=0.27",
    "faker>=26.0",
    "freezegun>=1.5",
    "respx>=0.21",
    "psutil>=6.0",
]

dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "config", "core", "evals", "memory", "prompts", "rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
markers = [
    "unit: Izolované unit testy",
    "integration: Integrační testy",
    "load: Zátěžové testy (pomalé)",
    "chaos: Chaos engineering testy",
    "perf: Výkonnostní testy",
    "smoke: Rychlý sanity check",
]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
