[project]
name = "todo-cli"
version = "0.1.0"
description = "A simple command-line todo application"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
todo = "todo_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_cli"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
